--- a/index.html
+++ b/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Super Wars</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-
-  <body>
-    <footer class="footer">Made with ♥️ by Kalvian</footer>
-  </body>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Superhero Wars</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Superhero Stats</h1>
+  </header>
+  <main>
+    <section class="grid-container">
+      <figure class="grid-item">
+        <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-1.png" alt="Spiderman">
+        <figcaption>Spiderman</figcaption>
+        <p>12</p>
+      </figure>
+      <figure class="grid-item">
+        <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-3.png" alt="Wonder Woman">
+        <figcaption>Wonder Woman</figcaption>
+        <p>30</p>
+      </figure>
+      <h1>5-0</h1>
+      
+      <figure class="grid-item">
+        <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-2.png" alt="Captain America">
+        <figcaption>Captain America</figcaption>
+        <p>50</p>
+      </figure>
+      <figure class="grid-item">
+        <img src="https://s3.ap-south-1.amazonaws.com/kalvi-education.github.io/front-end-web-development/super-4.png" alt="Another Woman">
+        <figcaption>Gem Woman</figcaption>
+        <p>12</p>
+      </figure>
+      <div class="grid-item stats">
+        
+      </div>
+    </section>
+  </main>
+</body>
+<footer class="footer">Made with ♥️ by Kalvian</footer>
 </html>
